--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,6 @@
             <a class="nav-link" href="{{ url_for('home') }}">Home</a>
           </li>
           <!-- TODO: Hide the Login/Registration navigation for logged-in users -->
-          {% if logged_in %}
-
-          {% endif %}
           {% if not logged_in %}
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('login') }}">Login</a>
@@ -34,10 +31,11 @@
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('register') }}">Register</a>
           </li>
-          {% endif %}
+          {% else %}
           <li class="nav-item">
             <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
           </li>
+          {% endif %}
         </ul>
       </div>
     </nav>
