--- a/templates/secrets.html
+++ b/templates/secrets.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="container">
+  {% if current_user.is_authenticated %}
   <h1 class="title">Welcome, {{name}} !</h1>
+  {% endif %}
     <a href="{{ url_for('download') }}" target="_blank">Download Your File</a>
 </div>
 {% endblock %}
